--- a/styles.css
+++ b/styles.css
@@ -460,7 +460,8 @@ section {
 }
 
 .mission::before,
-.mission_intro::before {
+.mission_intro::before,
+.contacts::before {
     content: '';
     position: absolute;
     bottom: -25px;
@@ -611,6 +612,114 @@ section {
 .mission_goal .section_text {
     max-width: 985px;
 }
+
+.contacts {
+    background-image: url('assets/contacts_bg.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.contacts .section_title {
+    color: #FED500;
+}
+
+.contacts .section_description {
+    color: #FFF;
+}
+
+.contacts_wrapper {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+}
+
+.form_wrapper {
+    width: 100%;
+    max-width: 430px;
+    padding: 28px 30px 28px 30px;
+    background: #FEFEFE;
+    box-shadow: 0px 0px 12px rgba(220, 188, 24, 0.49);
+    border-radius: 5px;
+    margin-top: 40px;
+    position: relative;
+    z-index: 1;
+}
+
+.main_form ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.main_form ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;   
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.main_form ul li:last-child {
+    margin-top: 30px;
+    margin-bottom: 0;
+}
+
+.main_form ul li:nth-child(3) {
+    margin-bottom: 0;
+}
+
+.main_form ul li label {
+    margin-bottom: 5px;
+}
+
+.main_form ul li input,
+.main_form ul li textarea {
+    width: 100%;
+    border: 2px solid #338EEE;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-top: 6px;
+    padding-bottom: 7px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.2;  
+}
+
+.main_form ul li input:focus,
+.main_form ul li textarea:focus {
+    outline: none;
+    border-color: #FED500;
+}
+
+.main_form ul li textarea {
+    resize: none;
+    height: 120px;
+}
+
+.main_form ul li input::placeholder,
+.main_form ul li textarea::placeholder {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.2;
+    color: #8C8C8C;
+}
+
+.main_form ul li button {
+    align-self: center;
+    border: none;
+    outline: none;
+}
+
+.main_form ul li .contact_email {
+    align-self: center;
+    color: #777777;
+    margin-top: 10px;
+}
+
 /* Media Queries ---------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 @media only screen and (min-width: 480px) {
@@ -735,6 +844,21 @@ section {
         margin-top: 0;
     }
 
+    .main_form ul li label,
+    .main_form ul li input,
+    .main_form ul li textarea,
+    .main_form ul li input::placeholder,
+    .main_form ul li textarea::placeholder {
+        font-size: 16px;
+    }
+
+    .main_form ul li input, 
+    .main_form ul li textarea {
+        padding-left: 15px;
+        padding-top: 12px;
+        padding-bottom: 14px;
+    }
+
     .footer .logo_name {
         white-space: unset;
     }
@@ -811,6 +935,14 @@ section {
         top: -18px;
     }
 
+    .contacts::before {
+        top: -12px;
+        left: 0;
+        background-size: 70%;
+        transform: rotate(180deg);
+        z-index: 0;    
+    }
+
     .accounting {
         background-image: url('assets/accounting_bg.png');
         background-size: cover;
@@ -837,6 +969,30 @@ section {
     }
 
     .accounting .section_description {
+        text-align: left;
+    }
+
+    .contacts {
+        background-image: none;
+        background-color: #338EEE;
+    }
+
+    .contacts_wrapper {
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .form_wrapper {
+        margin-top: 0;
+        margin-right: 50px;
+    }
+
+    .contacts .section_text {
+        align-items: flex-start;
+    }
+
+    .contacts .section_description {
         text-align: left;
     }
 
@@ -896,7 +1052,8 @@ section {
         background-size: 70%;
     }
 
-    .mission_intro::before {
+    .mission_intro::before,
+    .contacts::before {
         background-size: 100%;
         top: -25px;
     }
@@ -1036,6 +1193,27 @@ section {
     .stories .image {
         width: 55%;
     }
+
+    .contacts {
+        background-color: unset;
+        background-image: url('assets/contacts_bg.png');
+        background-size: 125%;
+        background-position: top left;
+    }
+
+    .form_wrapper {
+        max-width: 630px;
+        margin-right: 100px;
+        padding: 48px 60px 48px 60px;
+    }
+
+    .main_form ul li {
+        margin-bottom: 25px;
+    }
+
+    .main_form ul li:last-child {
+        margin-top: 50px;
+    }
 }
 
 @media only screen and (min-width: 1680px) {
@@ -1087,5 +1265,9 @@ section {
 
     .mission .section_text {
         max-width: 1380px;
+    }
+
+    .contacts {
+        background-size: 110%;
     }
 }
