--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,14 @@ header {
     z-index: 2;
 }
 
+fieldset {
+    border: none;
+}
+
+button {
+   border: none;
+}
+
 .nav_header_widescreen {
     display: none;
 }
@@ -82,6 +90,11 @@ header {
 .btn:hover {
     background-color: #F9FE00;
     transition: all .35s;
+}
+
+.btn:active {
+    background-color: #338EEE;   
+    color: #FFF; 
 }
 
 .icon_burger_wrapper {
@@ -503,14 +516,16 @@ section {
 .mission .section_title,
 .stories .section_title,
 .accounting .section_title,
-.mission_intro .section_title {
+.mission_intro .section_title,
+.donation .section_title {
     position: relative;
 }
 
 .mission .section_title::before, 
 .stories .section_title::before,
 .accounting .section_title::before,
-.mission_intro .section_title::before {
+.mission_intro .section_title::before,
+.donation .section_title::before {
     content: '';
     position: absolute;
     bottom: -13px;
@@ -519,6 +534,11 @@ section {
     width: 35px;
     height: 3px;
     background-color: #FED500;
+}
+
+.donation .section_title::before {
+    left: 0;
+    transform: unset;
 }
 
 .stories .section_title::before {
@@ -731,11 +751,312 @@ section {
     color: red;
 }
 
+.donation .section_content_wrapper {
+    align-items: flex-start;
+}
+
+.donation_icons_wrapper {
+    width: 100%;
+    margin-top: 35px;
+}
+
+.donation_list {
+    display: flex;
+    width: 100%;
+    max-width: 932px;
+    flex-wrap: wrap;
+    margin-top: 10px;
+}
+
+.donation_list .donation_item {
+    padding: 30px 40px;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #C8DAEA;
+    width: 50%;
+    text-align: center;
+}
+
+.donation_list .donation_item:hover {
+    border: 5px solid #C8DAEA;
+    margin: -4px;
+}
+
+.donation_list .donation_item:hover label {
+    color: #338EEE;
+    transition: color .35s;
+}
+
+.donation_list .donation_item label {
+    color: #1B1B1B;
+    font-weight: 700;
+    transition: color .35s;
+    user-select: none;
+}
+
+.donation_item .donation_icon {
+    display: inline-block;
+    width: 57px;
+    height: 57px;
+    margin-bottom: 27px;
+}
+
+.donation_item:nth-child(1) .donation_icon {
+    background-image: url('assets/refugees.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.donation_item:nth-child(2) .donation_icon {
+    background-image: url('assets/residing.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.donation_item:nth-child(3) .donation_icon {
+    background-image: url('assets/children.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.donation_item:nth-child(4) .donation_icon {
+    background-image: url('assets/military.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.donation_amount_wrapper {
+    width: 100%;
+    max-width: 932px;
+    position: relative;
+    margin-top: 40px;
+}
+
+.donation_amount_wrapper::before {
+    content: '$';
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #FFF;
+    width: 100%;
+    height: 100%;
+    background-color: #338EEE;
+    max-width: 62px;
+    font-family: 'Fraunces', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.donation_amount_wrapper .amount {
+    width: 100%;
+    padding: 15px 0px 15px 82px;
+    font-size: 24px;
+    font-weight: 700;
+    border: 2px solid #338EEE;
+}
+
+.donation_amount_wrapper .amount:focus {
+    outline: none;
+}
+
+.donation_subsctiption_wrapper {
+    margin-top: 40px;
+    display: block;
+    position: relative;
+    padding-left: 45px;
+    cursor: pointer;
+    font-size: 16px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.donation_subsctiption_wrapper input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+.checkmark {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    height: 30px;
+    width: 30px;
+    border: 2px solid #C8DAEA;
+  }
+
+.donation_subsctiption_wrapper input:hover ~ .checkmark {
+    background-color: #C8DAEA;
+}
+  
+.donation_subsctiption_wrapper input:checked ~ .checkmark {
+    background-color: #338EEE;
+    border-color: #338EEE;
+  }
+  
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+.donation_subsctiption_wrapper input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+.donation_subsctiption_wrapper .checkmark:after {
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+
+.donation_btns {
+    width: 100%;
+    max-width: 516px;
+}
+
+.btns_divider {
+    display: inline-block;
+    text-align: center;
+    width: 100%;
+    font-size: 24px;
+    margin-top: 15px;
+    margin-bottom: 19px;
+    position: relative;
+}
+
+.btns_divider::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 45%;
+    height: 1px;
+    background-color: #C8DAEA;
+}
+
+.btns_divider::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 45%;
+    height: 1px;
+    background-color: #C8DAEA;
+}
+
+.donation_button_wrapper {
+    width: 100%;
+    max-width: 516px;
+    position: relative;
+}
+
+.donation_button_wrapper:first-child {
+    margin-top: 40px;
+}
+
+.donation_button_wrapper .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 64px;
+    color: #FFF;
+    padding-left: 78px;
+    position: relative;
+}
+
+.donation_button_wrapper .btn_paypal:hover {
+    background-color: #4EA4FF;
+    border-color: #4EA4FF;
+    transition: all .35s;
+}
+
+.donation_button_wrapper .btn_gofundme:hover {
+    background-color: #21D983;
+    border-color: #21D983;
+    transition: all .35s;
+}
+
+.donation_button_wrapper .btn_paypal:active,
+.donation_button_wrapper .btn_gofundme:active {
+    background-color: #FED500;
+    border-color: #FED500;
+    color: #338EEE;
+}
+
+.btn_paypal {
+    background-color: #338EEE;
+    border: 2px solid #338EEE;
+}
+
+.btn_gofundme {
+    border: 2px solid #00B460;
+    background-color: #00B460;
+}
+
+.btn_decoration {
+    position: absolute;
+    top: 50%;
+    left: 1px;
+    width: 20%;
+    max-width: 93px;
+    min-width: 53px;
+    height: 60px;
+    background-color: #FFF;
+    transform: translateY(-50%);
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+    z-index: 1;
+}
+
+.btn_decoration::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 33px;
+    height: 33px;
+}
+
+.btn_paypal .btn_decoration::before {
+    background-image: url('assets/icon_paypal.png');
+}
+
+.btn_gofundme .btn_decoration::before {
+    background-image: url('assets/icon_gofundme.png');
+}
+
 /* Media Queries ---------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 @media only screen and (min-width: 480px) {
     .logo_name {
         font-size: 16px;
+    }
+
+    .donation_icons_wrapper fieldset legend {
+        font-size: 14px;
     }
 
     .footer_content_top {
@@ -868,6 +1189,33 @@ section {
         padding-left: 15px;
         padding-top: 12px;
         padding-bottom: 14px;
+    }
+
+    .donation_amount_wrapper .amount {
+        padding: 30px 0px 30px 150px;
+    }
+
+    .donation_list {
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        margin-top: 27px;
+    }
+
+    .donation_list .donation_item {
+        width: unset;
+    }
+
+    .donation_amount_wrapper::before {
+        max-width: 121px;
+        font-size: 32px;
+    }
+
+    .donation_amount_wrapper .amount {
+        font-size: 24px;
+    }
+
+    .donation_icons_wrapper fieldset legend {
+        font-size: 16px;
     }
 
     .footer .logo_name {
@@ -1007,6 +1355,15 @@ section {
         text-align: left;
     }
 
+    .donation_icons_wrapper fieldset legend,
+    .donation_list .donation_item label {
+        font-size: 18px;
+    }
+
+    .donation_amount_wrapper .amount {
+        padding: 30px 0px 30px 165px;
+    }
+
     .nav_footer {
         width: 300px;
     }
@@ -1072,7 +1429,8 @@ section {
     .mission .section_title::before, 
     .stories .section_title::before,
     .accounting .section_title::before,
-    .mission_intro .section_title::before {
+    .mission_intro .section_title::before,
+    .donation .section_title::before {
         bottom: -16px;
         width: 50px;
         height: 4px;
@@ -1115,6 +1473,41 @@ section {
     .accounting {
         padding-top: 220px;
         padding-bottom: 160px;
+    }
+
+    .donation_icons_wrapper fieldset legend,
+    .donation_list .donation_item label,
+    .donation_subsctiption_wrapper {
+        font-size: 24px;
+    }
+
+    .donation_subsctiption_wrapper {
+        padding-left: 55px;
+    }
+
+    .checkmark {
+        width: 40px;
+        height: 40px;
+    }
+
+    .donation_subsctiption_wrapper .checkmark:after {
+        width: 10px;
+        height: 20px;
+        top: 16px;
+        border-width: 0 5px 5px 0;
+    }
+
+    .donation_amount_wrapper::before,
+    .donation_amount_wrapper .amount {
+        font-size: 36px;
+    }
+
+    .donation_icons_wrapper {
+        margin-top: 75px;
+    }
+
+    .donation_list {
+        margin-top: 27px;
     }
 
     .footer_content_top {
@@ -1187,6 +1580,11 @@ section {
 
     .section_description {
         font-size: 24px;
+    }
+
+    .donation_amount_wrapper::before,
+    .donation_amount_wrapper .amount {
+        font-size: 50px;
     }
 
     .slide:nth-child(1) .section_description {
@@ -1269,7 +1667,9 @@ section {
 
     .mission .section_title::before, 
     .stories .section_title::before,
-    .accounting .section_title::before {
+    .accounting .section_title::before,
+    .mission_intro .section_title::before,
+    .donation .section_title::before {
         width: 70px;
         height: 6px;
     }
