--- a/styles.css
+++ b/styles.css
@@ -421,6 +421,52 @@ button {
     background-position: bottom right;
 }
 
+.slide:nth-child(3) {
+    background: linear-gradient(117.76deg, rgba(97, 179, 255, 0.34) 13.12%, rgba(225, 241, 255, 0) 79.7%);
+}
+
+.slide:nth-child(3) .wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column-reverse;
+}
+
+.slide_imgs_wrapper {
+    width: 100%;
+    max-width: 495px;
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.imgs_list {
+    display: flex;
+    justify-content: flex-start;
+    overflow-x: scroll;
+    padding-bottom: 15px;
+}
+
+.imgs_item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.imgs_media {
+    height: 70px;
+}
+
+.imgs_label {
+    font-family: 'Fraundes', serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #338EEE;
+    position: relative;
+    width: 100px;
+}
+
 .slide_content_wrapper {
     display: flex;
     flex-direction: column;
@@ -1166,6 +1212,22 @@ section {
         text-align: left;    
     }
 
+    .slide_imgs_wrapper {
+        max-width: 590px;
+        margin-top: 0;
+    }
+
+    .imgs_list {
+        width: 100%;
+        justify-content: space-between;
+        overflow-x: unset;
+        padding-bottom: 25px;
+    }
+
+    .imgs_media {
+        height: 100px;
+    }
+
     .section_title {
         font-size: 28px;
     }
@@ -1331,6 +1393,72 @@ section {
         padding-bottom: 100px;
     }
 
+    .slide:nth-child(3) .wrapper {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .slide:nth-child(3) .slide_content_wrapper {
+        width: 540px;
+    }
+
+    .slide:nth-child(3) .slide_text {
+        align-items: unset;
+        text-align: left;
+    }
+
+    .slide:nth-child(3) .section_title,
+    .slide:nth-child(3) .section_description {
+        white-space: unset;
+        text-align: left;
+    }
+
+    .slide_imgs_wrapper {
+        display: block;
+        margin: unset;
+        max-width: 495px;
+    }
+    
+    .imgs_list {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: unset;
+        align-items: unset;
+        padding-bottom: 0;
+    }
+    
+    .imgs_item {
+        display: block;
+        width: 48%;
+        max-width: 339px;
+    }
+    
+    .imgs_item:nth-child(3),
+    .imgs_item:nth-child(4) {
+        margin-top: 20px;
+    }
+    
+    .imgs_media {
+        width: 190px;
+        height: 148px;
+    }
+
+    .imgs_label {
+        font-size: 16px;
+        margin-top: 15px;
+        width: unset;
+    }
+
+    .imgs_label::before {
+        content: '';
+        position: absolute;
+        top: -8px;
+        left: 0;
+        width: 35px;
+        height: 3px;
+        background-color: #FED500;   
+    }
+
     .mission {
         padding-bottom: 100px;
     }
@@ -1470,6 +1598,12 @@ section {
         width: 350px;
     }
 
+    .imgs_label {
+        font-family: 'Fraundes', serif;
+        font-size: 21px;
+        margin-top: 20px;
+    }
+
     .mission::before {
         background-size: 70%;
     }
@@ -1600,6 +1734,15 @@ section {
         height: 663px;
     }
 
+    .imgs_list {
+        justify-content: space-between;
+    }
+
+    .imgs_media {
+        width: 100%;
+        height: 184px;
+    }
+
     .mission_description .section_description {
         padding-left: 0;
         padding-right: 0;
@@ -1642,6 +1785,10 @@ section {
 
     .section_description {
         font-size: 24px;
+    }
+
+    .slide:nth-child(3) .slide_content_wrapper {
+        width: 690px;
     }
 
     .donation_amount_wrapper::before,
@@ -1705,6 +1852,45 @@ section {
     section {
         padding-top: 150px;
         padding-bottom: 150px;
+    }
+
+    .slide_imgs_wrapper {
+        max-width: 720px;
+    }
+
+    .slide:nth-child(3) .slide_content_wrapper {
+        position: relative;
+        top: -60px;
+    }
+
+    .imgs_list {
+        justify-content: space-between;
+    }
+
+    .imgs_item:nth-child(1),
+    .imgs_item:nth-child(3) {
+        margin-right: 40px;
+    }
+
+    .imgs_item:nth-child(3),
+    .imgs_item:nth-child(4) {
+        margin-top: 40px;
+    }
+
+    .imgs_media {
+        width: 100%;
+        height: 260px;
+    }
+
+    .imgs_label {
+        font-size: 32px;
+        margin-top: 35px;
+    }
+
+    .imgs_label::before {
+        width: 71px;
+        height: 4px;
+        top: -15px;
     }
 
     .stories {
